Dispatch initial state only once from the server + fix undo action went to spinner

--- a/views/index.jade
+++ b/views/index.jade
@@ -13,6 +13,8 @@ html
           | by 
           a(target='_blank', href='http://www.jvrpath.com/') jvalen
         iframe(src='https://ghbtns.com/github-btn.html?user=jvalen&repo=pixel-art-react&type=star&count=true&size=large', frameborder='0', scrolling='0', width='120px', height='30px')
+  script.
+      window.__INITIAL_STATE__ = !{initialState}
   div(id="app") !{reactOutput}
   script(src='https://code.jquery.com/jquery-2.1.4.min.js')
   script(src='bundle.js')
