--- a/src/css/imports.css
+++ b/src/css/imports.css
@@ -1,4 +1,17 @@
 @charset 'UTF-8';
+@import 'fonts/_fonts.css';
 @import '_variables.css';
 @import '_utils.css';
 @import '_base.css';
+@import 'layout/_grid.css';
+@import 'layout/_header.css';
+@import 'layout/_queries.css';
+@import 'layout/_banner.css';
+@import 'input/_inputText.css';
+@import 'input/_button.css';
+@import 'components/_pixelGrid.css';
+@import 'components/_simpleNotification.css';
+@import 'components/_simpleSpinner.css';
+@import 'components/_loadDrawing.css';
+@import 'components/_saveDrawing.css';
+@import 'components/_twitterButton.css';
