--- a/src/css/imports.css
+++ b/src/css/imports.css
@@ -15,5 +15,5 @@
 @import 'components/_SimpleSpinner.css';
 @import 'components/_LoadDrawing.css';
 @import 'components/_SaveDrawing.css';
-@import 'components/_TwitterButton.css';
+@import 'components/_TwitterForm.css';
 @import 'components/_UndoRedo.css';
