Reset style integrated in postcss

--- a/src/css/imports.css
+++ b/src/css/imports.css
@@ -18,3 +18,4 @@
 @import 'components/_TwitterForm.css';
 @import 'components/_UndoRedo.css';
 @import 'components/_App.css';
+@import 'components/_Reset.css';
