Modal style integrated in postcss

--- a/src/css/imports.css
+++ b/src/css/imports.css
@@ -23,3 +23,4 @@
 @import 'components/_Preview.css';
 @import 'components/_PaletteGrid.css';
 @import 'components/_PaletteColor.css';
+@import 'components/_Modal.css';
