FrameSelector style integrated in postcss

--- a/src/css/imports.css
+++ b/src/css/imports.css
@@ -24,3 +24,4 @@
 @import 'components/_PaletteGrid.css';
 @import 'components/_PaletteColor.css';
 @import 'components/_Modal.css';
+@import 'components/_FrameSelector.css';
