--- a/src/css/components/_SimpleSpinner.css
+++ b/src/css/components/_SimpleSpinner.css
@@ -7,7 +7,7 @@
   margin-right: auto;
   width: 100%;
   height: 100%;
-  background-color: $color-black;
+  background-color: black;
   opacity: 0.4;
   top: 0;
   display: none;
