--- a/src/css/layout/_banner.css
+++ b/src/css/layout/_banner.css
@@ -11,7 +11,7 @@
     position: relative;
     line-height: 24px;
     opacity: 0.5;
-    background-color: $color-white;
+    background-color: white;
     font-weight: 500;
     color: $color-mineShaft;
     cursor: pointer;
