Eyedropper style integrated in postcss

--- a/src/css/imports.css
+++ b/src/css/imports.css
@@ -25,3 +25,4 @@
 @import 'components/_Modal.css';
 @import 'components/_FrameSelector.css';
 @import 'components/_Frame.css';
+@import 'components/_EyeDropper.css';
