DownloadDrawing style integrated in postcss

--- a/src/css/imports.css
+++ b/src/css/imports.css
@@ -27,3 +27,4 @@
 @import 'components/_Frame.css';
 @import 'components/_EyeDropper.css';
 @import 'components/_Eraser.css';
+@import 'components/_DownloadDrawing.css';
