--- a/src/css/imports.css
+++ b/src/css/imports.css
@@ -28,3 +28,4 @@
 @import 'components/_EyeDropper.css';
 @import 'components/_Eraser.css';
 @import 'components/_DownloadDrawing.css';
+@import 'components/_Dimensions.css';
