--- a/src/css/imports.css
+++ b/src/css/imports.css
@@ -29,3 +29,4 @@
 @import 'components/_Eraser.css';
 @import 'components/_DownloadDrawing.css';
 @import 'components/_Dimensions.css';
+@import 'components/_CssDisplay.css';
