--- a/src/css/components/_FramesHandler.css
+++ b/src/css/components/_FramesHandler.css
@@ -2,13 +2,15 @@
   lost-utility: clearfix;
   .frames-handler__add {
     @mixin button gray;
-    height: 65px;
+    height: 72px;
     float: left;
   }
   .frame-handler__list {
     display: flex;
-    padding-left: 0.5em;
+    background-color: rgba(51, 50, 50, 0.2);
+    padding: 0.2em;
     .list__container {
+      height: 72px;
       display: flex;
       flex-wrap: nowrap;
       padding-bottom: 0.5em;
