General layout improvement and dimensions and picker fix

--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -22,3 +22,6 @@ $color-cowboy: #552a2a;
 $color-steelblue: #5786c1;
 $color-sanMarino: #4171ae;
 $color-eastBay: #3a587f;
+
+$color-alto: #e0e0e0;
+$color-silveChalice: #a0a0a0;
