CellSize component extracted from Dimensions

--- a/src/css/_utils.css
+++ b/src/css/_utils.css
@@ -55,7 +55,7 @@
 [data-tooltip]::before {
   margin-left: -6px;
   margin-bottom: -12px;
-  border-top-color: #000;
+  border-top-color: black;
   border-top-color: hsla(0, 0%, 20%, 0.9);
 }
 
