New font layout fixes

--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -1,4 +1,4 @@
-$font-pixel: 'silkscreen_expandednormal', 'Helvetica Neue Light', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+$font-pixel: 'minecraftiaregular', 'Helvetica Neue Light', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 $font-icons: 'FontAwesome';
 
 $color-scorpion: #585858;
