--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -5,6 +5,7 @@ $color-scorpion: #585858;
 $color-boulder: #757575;
 $color-dustyGray: #969696;
 $color-silver: #bbb;
+$color-brandyRose: #b17e7e;
 
 /* Button colors */
 $color-tamarillo: #961818;
