--- a/src/css/layout/_header.css
+++ b/src/css/layout/_header.css
@@ -1,4 +1,23 @@
 header {
   padding: 0 1.4em;
   color: $color-silver;
+  lost-utility: clearfix;
+  .header__credits {
+    text-align: right;
+    margin-top: 1em;
+    top: 1em;
+    position: relative;
+    a {
+      text-decoration: none;
+      color: $color-brandyRose;
+    }
+    h2 {
+      display: block;
+      font-size: 0.8em;
+      padding-right: 1.5em;
+      position: relative;
+      margin: 0;
+      top: 0;
+    }
+  }
 }
