--- a/views/index.pug
+++ b/views/index.pug
@@ -6,15 +6,18 @@ html
     link(rel='shortcut icon', href='favicon.ico', type='image/x-icon')
     link(rel='stylesheet', href='main.css')
   body
-  header.grid
+  header
     .col-2-3
-      h1 Pixel Art to CSS
-    .credits-wrapper.col-1-3
+      h1 PIXEL ART TO CSS
+    .header__credits.col-1-3
       div
         h2
           | by
-          a(target='_blank', href='http://www.jvrpath.com/') jvalen
-        iframe(src='https://ghbtns.com/github-btn.html?user=jvalen&repo=pixel-art-react&type=star&count=true&size=large', frameborder='0', scrolling='0', width='120px', height='30px')
+          a(target='_blank', href='http://www.jvrpath.com/') JVALEN
+        iframe(
+          src='https://ghbtns.com/github-btn.html?user=jvalen&repo=pixel-art-react&type=star&count=true',
+          frameborder='0' scrolling='0' width='100px' height='20px'
+        )
   script.
       window.__INITIAL_STATE__ = !{initialState}
   div(id="app") !{reactOutput}
